addons/website_sale/static/src/scss/website_sale.scss
/* ... */
// ==== Grid image styling
.o_wsale_product_page_grid_column .o_product_detail_img_wrapper {
    aspect-ratio: var(--o-wsale-product-image-ratio);

    > .product_detail_img {
        aspect-ratio: inherit;
        object-fit: cover;
    }
}

// ==== Carousel ===============================================================
#o-carousel-product {
    transition: top 200ms;

    .carousel-inner img {
        object-fit: cover;

        @include media-breakpoint-up(lg) {
            border-radius: var(--o-wsale-product-image-radius);
        }
    }

    .carousel-outer {
        aspect-ratio: var(--o-wsale-product-image-ratio);
    }

    // Hide controls when not hovering on desktop
    @include media-breakpoint-up(xl) {
        &:not(:hover) {
            .carousel-control-prev,
            .carousel-control-next {
                opacity: 0;
            }
        }
    }

    .carousel-item,
    .o_carousel_product_indicators {
        transition: transform 0.2s ease-out;
    }

    .carousel-indicators {
        transition: transform 0.3s ease-in-out;
    }

    // ==== Carousel indicators
    .o_carousel_product_indicators {
        max-height: 400px;

        // Desktop indicator styles
        @include media-breakpoint-up(lg) {
            .carousel-indicators {
                justify-content: start;

                li {
                    width: 64px;
                    height: auto;
                    text-indent: unset;
                    transition: none;
                    border: $border-width solid $border-color;

                    &,
                    & > div,
                    & > div > img {
                        border-radius: MIN(var(--o-wsale-product-image-radius), var(--border-radius));
                        aspect-ratio: var(--o-wsale-product-image-ratio);
                    }

                    .o_product_video_thumb {
                        @include o-position-absolute(0, 0, 0, 0);
                        line-height: 64px;
                    }

                    &.active {
                        border-color: map-get($theme-colors, 'primary');
                    }

                    &:where(:not(:hover)) {
                        opacity: .75;
                    }

                    &:hover,
                    &.active {
                        opacity: 1;
                    }
                }
            }
        }
    }

    // Mobile indicator styles
    @include media-breakpoint-down(lg) {
        &.o_carousel_product_left_indicators {
            flex-direction: column-reverse;
        }

        .carousel-indicators {
            justify-content: center;

            li {
                width: 8px;
                height: 8px;
                min-width: 8px;
                border-radius: 50%;
                border: 2px solid map-get($grays, '400');

                &.active {
                    border-color: map-get($theme-colors, 'primary');
                    background-color: map-get($theme-colors, 'primary');
                }
                > div {
                    display: none;
                }
            }
        }
    }

    // Indicator spacing
    @include media-breakpoint-up(lg) {
        .carousel-indicators li {
            margin: 0;

            &:not(:first-child) {
                margin-left: 10px;
            }
        }

        &.o_carousel_product_left_indicators {
            .carousel-indicators li {
                margin: 0;

                &:not(:first-child) {
                    margin-top: 10px;
                }
            }
        }
    }

    // Indicator Positioning
    @include media-breakpoint-up(lg) {
        .o_wsale_product_page_opt_image_width_100_pc &:not(.o_carousel_product_left_indicators) {
            .o_carousel_product_indicators {
                @include o-position-absolute(auto, 0, .75rem, 0);
            }
        }
    }
}

// ==== Carousel Controls (shared between carousel and image viewer) ===========
#o-carousel-product, .o_wsale_image_viewer {
    .carousel-control-prev, .carousel-control-next {
        top: auto;
        bottom: auto;
        opacity: 0.5;
        cursor: pointer;
        transition: opacity 0.8s;

        &:focus {
            opacity: 0.65;
        }

        &:hover {
            opacity: 0.8;
        }

        > i {
            width: 2.5rem;
            height: 2.5rem;
            line-height: 2.5rem;
            @include font-size(1.15rem);
            border-radius: var(--btn-border-radius);

            @include media-breakpoint-down(lg) {
                width: 2rem;
                height: 2rem;
                line-height: 2rem;
                font-size: 1rem;
            }
        }
    }
}

// ==== IMAGE ZOOM (discontinued) ==============================================
.ecom-zoomable {
    &[data-ecom-zoom-click] img.product_detail_img {
        cursor: zoom-in;
    }

    img[data-zoom] {
        cursor: zoom-in;
    }

    .o_editable img[data-zoom] {
        cursor: pointer;
    }
}

#coupon_box form {
    max-width: 300px;
}

.o_website_sale_animate {
    opacity: 0.7;
    position: absolute !important;
    height: 150px;
    width: 150px;
    z-index: 1020;
}

.o_red_highlight {
    --badge-bg: #{map-get($theme-colors, 'danger')} !important;
    --badge-border-color: var(--badge-bg);

    box-shadow: 0 0 0 0 rgba(240,8,0,0.4);
    transition: all 0.5s linear;
}

.o_shadow_animation {
    box-shadow: 0 0 5px 10px rgba(240,8,0,0.4)!important;
}

.o_mycart_zoom_animation {
    transform: scale(1.4);
    transition: all 0.3s ease-in-out;
}

// customer reviews
.o_product_page_reviews_title {
    .oi {
        @include font-size(1.4rem);

        &:before {
            content: "\e809";
        }
    }
    &:not(.collapsed) {
        .oi:before {
            content: "\e80b";
        }
    }
}
/* ... */

