[FIX] website_sale: correct mobile padding
This commit removes unnecessary mobile padding that misaligns
the carousel indicators.

task-5126294

--- a/addons/website_sale/static/src/scss/website_sale.scss
+++ b/addons/website_sale/static/src/scss/website_sale.scss
@@ -1547,6 +1547,7 @@ $-product-radius-map: (
         @include media-breakpoint-up(lg) {
             .carousel-indicators {
                 justify-content: start;
+                padding-right: #{map-get($spacers, 2)};
 
                 li {
                     width: 64px;
